LPS-40604 fix site scope display on mobile

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom_responsive.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom_responsive.css
@@ -12,10 +12,6 @@
 			.brand {
 				font-size: 16px;
 				padding: 18px 0 0 0;
-
-				.control-panel-site-selector, .divider {
-					display: none;
-				}
 			}
 
 			.btn-navbar {
